# amc-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  dashboard.html  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py
models/: .gitkeep
results/: .gitkeep
scripts/: generate_demo_data.py
src/: data_loader.py  evaluate.py  model.py  train.py  utils.py
tests/: __init__.py  test_amc.py
