[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amc-classifier"
version = "1.0.0"
description = "Automatic Modulation Classification using Deep Learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AMC Project"}
]
keywords = ["deep-learning", "signal-processing", "modulation-classification", "cnn", "tensorflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tensorflow>=2.10.0,<2.18.0",
    "numpy>=1.23.0,<2.0.0",
    "pandas>=1.5.0,<3.0.0",
    "h5py>=3.7.0,<4.0.0",
    "scikit-learn>=1.1.0,<2.0.0",
    "matplotlib>=3.6.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "plotly>=5.10.0,<6.0.0",
    "streamlit>=1.25.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/amc-classifier"
"Bug Tracker" = "https://github.com/yourusername/amc-classifier/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
